--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "tsx src/server.ts",
+    "dev": "tsx watch src/server.ts",
     "autodocs": "tsx src/autoswagger.ts"
   },
   "dependencies": {
