--- a/.docker/backend/Dockerfile
+++ b/.docker/backend/Dockerfile
@@ -1,21 +1,9 @@
 FROM node:18
 
-# workdir
-WORKDIR /app
+WORKDIR /usr/src/app
 
-# copy package.json
-COPY package.json .
+COPY package*.json .
 
-# install dependencies
-RUN npm install --global yarn
+COPY . .
 
-run yarn
-
-# copy all files \
-COPY .. .
-
-# expose port
 EXPOSE 3000
-
-# start the app
-CMD ["yarn", "start"]
