--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "tsx src/server.ts",
+    "start": "node dist/server.js",
     "dev": "tsx watch src/server.ts",
+    "build": "tsc -p .",
     "autodocs": "tsx src/autoswagger.ts"
   },
   "dependencies": {
     "@prisma/client": "5.13.0",
-    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "axios": "^1.6.8",
-    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
