--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
   postgres:
     build: .docker/postgres
     image: postgres:16
-    container_name: afasys-postgres
+    container_name: soil-postgres
     restart: always
     shm_size: 128mb
     networks:
@@ -21,7 +21,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      - "5432:5432"
+      - "5432:5433"
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
@@ -35,5 +35,7 @@ services:
       - '3000:3000'
     env_file:
       - .env
+    environment:
+      DATABASE_URL: postgres://postgres:123456@postgres:5433/soil-db
     volumes:
       - .:/usr/src/app
