--- a/.docker/database/docker-compose.yml
+++ b/.docker/database/docker-compose.yml
@@ -11,7 +11,7 @@ services:
   database:
     build: .docker/postgres
     image: postgres:16
-    container_name: soil-postgres
+    container_name: database-postgres
     restart: always
     shm_size: 128mb
     networks:
@@ -24,18 +24,3 @@ services:
       - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
-
-  backend:
-    build: .docker/backend
-    entrypoint: .docker/entrypoint.sh
-    container_name: soil-api
-    networks:
-      - soil-net  # Mantido conforme definido
-    ports:
-      - '3000:3000'
-    env_file:
-      - .env
-    environment:
-      DATABASE_URL: postgres://postgres:123456@database:5432/soil-db
-    volumes:
-      - .:/usr/src/app
