--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,19 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
+  frontend:
+    build: docker/
+    entrypoint: docker/entrypoint.sh
+    container_name: soil-front
+    networks:
+      - soil-net  # Mantido conforme definido
+    ports:
+      - '3001:3001'
+    env_file:
+      - .env
+    volumes:
+      - .:/usr/src/app
+
   backend:
     build: .docker/backend
     entrypoint: .docker/entrypoint.sh
@@ -33,9 +46,38 @@ services:
       - soil-net  # Mantido conforme definido
     ports:
       - '3000:3000'
+      - '9100:9100'
     env_file:
       - .env
     environment:
       DATABASE_URL: postgres://postgres:123456@database:5432/soil-db
     volumes:
       - .:/usr/src/app
+
+  prometeus:
+    image: prom/prometheus
+    user: root
+    container_name: soil-prometheus
+    hostname: prometheus
+    restart: always
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+    networks:
+      - soil-net
+    ports:
+        - "9090:9090"
+
+  grafana:
+    image: grafana/grafana
+    container_name: soil-grafana
+    restart: always
+    hostname: grafana
+    environment:
+        - GF_SECURITY_ADMIN_PASSWORD=admin
+    networks:
+      - soil-net
+    ports:
+      - "3003:3000"
