--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/server.js",
     "dev": "tsx watch src/server.ts",
     "build": "tsc -p .",
-    "autodocs": "tsx src/autoswagger.ts"
+    "autodocs": "tsx src/autoswagger.ts",
+    "serverTest": "tsx src/testServer.ts && jest"
   },
   "dependencies": {
     "@prisma/client": "5.13.0",
@@ -20,14 +21,23 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "prom-client": "^11.5.3",
     "tsx": "^4.9.3",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/moment": "^2.13.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "jest": "^29.7.0",
     "prisma": "^5.13.0",
-    "swagger-autogen": "^2.23.7"
+    "superagent": "^9.0.2",
+    "supertest": "^7.0.0",
+    "swagger-autogen": "^2.23.7",
+    "ts-jest": "^29.1.2"
   }
 }
